# C-Vladimirov

./: .gitignore
cache LRU 2Q/: CMakeLists.txt  LRU-2Q.cpp  Makefile  main.cpp  main2Q.cpp  mainId.cpp
cache LRU 2Q/include/: LRU-2Q.hpp  LRU.hpp  containers.hpp  ideal_cache.hpp
cache LRU 2Q/src/: LRU-2Q.cpp  LRU.cpp  ideal_cache.cpp  main.cpp
cache LRU 2Q/tests/: test1.txt  test2.txt  test3.txt  test4.txt
triangles/: CMakeLists.txt  main.cpp
triangles/include/: geometry_elems.hpp  input_t.hpp  octotree.hpp
triangles/src/: geometry_elems.cpp  input_t.cpp  octotree.cpp
triangles/tests/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
